youPickeDiss.css
@import url('https://fonts.googleapis.com/css2?family=Staatliches&display=swap');
* {
    font-family: 'Staatliches';
    font-style: normal;
    font-size:16px;
}

/* If the screen size is 600px wide or less, set the font-size to 12px */
@media screen and (max-width: 800px) {
    * {
        font-size: 12px;
    }
}


td {
    padding-bottom: 1em;
}

.basket {
    color: rgba(255,255,255,.55);
}

.basket:hover {
    color: rgba(255,255,255,.75);
}

.basketItem {
    text-align: center;
    height: 65px;
}

/* now just for the image */
.basketItemContents {
    font-size: x-small;
    float: left;
    width: 20%;
}

.basketItemRemoveBtn {
    font-size: x-small;
    float: left;
    width: 20%;
    padding-top: 25px;
}

.basketItemPrice {
    font-size: x-small;
    float: left;
    width: 10%;
    white-space: nowrap;
    overflow: hidden;
    padding-top: 28px;
}

.basketItemQuantityBtn {
    font-size: x-small;
    float: left;
    width: 18%;
    padding-top: 25px;
    white-space: pre;
}

.basketItemText {
    font-size: x-small;
    float: left;
    width: 32%;
    white-space: nowrap;
    overflow: hidden;
    padding-top: 28px;
}

.carousel img {
    object-fit: contain;
}

.dropdown-menu{
    min-width: 320px;
}

.footerLogo {
    display: inline-block;
    margin-left: auto;
    margin-right: auto;
    height: 30px;
}

.logo {
    display: block;
    width: 20%;
    height: 20%;
    margin-left: auto;
    margin-right: auto;
}

.pageInfo {
    padding-top: 50px;
}

.productAddToBasket {
    display: flex;
    align-items: center;
    justify-content: center;
    font-size: 8px;
}

.productContainer {
    display: flex;
    align-items: center;
    justify-content: center;
}

.productLargeImg {
    width:200px;
    height:400px;
}

.productSubtext{
    text-align:center;
    font-size:12px;
}

.productThumbnail {
    width: 120px;
    height: 200px;
    align-items:center;
}

.productBasketImage{
    height:60px;
    width:40px;
}

.searchBar {
    width: fit-content;
    display: inline-block;
    vertical-align: top;
}

@media screen and (max-width: 1000px) {
    .productContainer{
        height:100px;
    }
    .productSubtext {
        font-size: 10px;
    }
    .productThumbnail {
        width: 60px;
        height: 100px;
        vertical-align:central;
    }

    .productThumbnailImage{
        height:60px;
        width:40px;
    }
    
}

@media screen and (max-width: 700px) {
    .button {
        width:auto;
    }
    .productContainer {
        height: 80px;
    }

    .productSubtext {
        font-size: 8px;
    }

    .productThumbnail {
        width: 50px;
        height: 80px;
        vertical-align: central;
    }

    .productThumbnailImage {
        height: 60px;
        width: 40px;
    }
}


/* imported from old bootstrap documentation */
.btn-group-xs > .btn, .btn-xs {
    padding: 1px 4px;
    font-size: 12px;
    line-height: 1.5;
    border-radius: 3px;
}

